# agent-examples

./: pyproject.toml
env_files/: .env_template
examples/: read_resource.py
examples/anthropic/: response.py
examples/litellm/: response.py
examples/openai/: chat_completion.py  response.py  stream.py  structured_json_schema.py  structured_pydantic.py
src/agent_examples/: __init__.py  env.py  read_resource.py
src/agent_examples/resources/: egan_orphanogenesis.txt  wf92.txt
